--- a/backend/package.json
+++ b/backend/package.json
@@ -82,6 +82,7 @@
     "moment-timezone": "^0.5.13",
     "mongoose": "^5.2.17",
     "morgan": "^1.8.1",
+    "multer": "^1.4.3",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
